cluster/db-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cmpt756marketplacedb
spec:
  hosts:
    - cmpt756marketplacedb
  # This is an internal service, so is not announced to the gateway.
  # With no "gateways" field, the default applies: Make this service
  # known internally to every other service.
  http:
    - match:
        - uri:
            prefix: /api/v1/datastore
      rewrite:
        uri: /api/v1/datastore
      route:
        - destination:
            host: cyberdb
            port:
              number: 30004
